# agentgui

./: .gitlab-ci.yml  CMakeLists.txt  README.md  uisettings  version.h.in
InstallationFiles/: AgentGUI.sh
WiXFiles/: AgentGUI.wxs  License.rtf  Variables.wxi
src/: bellindicator.cpp  bellindicator.h  bellindicator.ui  filterfilesmodel.cpp  filterfilesmodel.h  frameless.cpp  frameless.h  localclient.cpp  localclient.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  plugininfolabel.cpp  plugininfolabel.h  plugininfolabel.ui  popupmessagetab.cpp  popupmessagetab.h  popupmessagetab.ui  res.qrc  settings.cpp  settings.h  style.h  switchcheckbox.cpp  switchcheckbox.h  tablefilesmodel.cpp  tablefilesmodel.h  tabletooltip.cpp  tabletooltip.h  tableusbmodel.cpp  tableusbmodel.h  tableviewdelegate.cpp  tableviewdelegate.h  tabmessage.cpp  tabmessage.h  tabmessage.ui  widgetabout.cpp  widgetabout.h  widgetabout.ui
src/languages/: agentui_en.qm  agentui_en.ts  agentui_fr.qm  agentui_fr.ts  agentui_ru.qm  agentui_ru.ts
